[package]
name = "jail"
version = "0.0.0-alpha4"
authors = ["Fabian Freyer <fabian.freyer@physik.tu-berlin.de>"]
description = "FreeBSD jail library"
license = "BSD-3-Clause"
repository = "https://github.com/fubarnetes/libjail-rs"
documentation = "https://fubarnetes.github.io/libjail-rs/x86_64-unknown-freebsd/jail/index.html"
keywords = ["freebsd", "jail", "container", "chroot"]
categories = ["os::unix-apis", "api-bindings"]

[lib]
name = "jail"
path = "src/lib.rs"

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "fubarnetes/libjail-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "fubarnetes/libjail-rs" }
is-it-maintained-open-issues = { repository = "fubarnetes/libjail-rs" }

[dependencies]
libc = "0.2"
bitflags = "1.0"
failure = "0.1"
