[package]
name = "jail"
version = "0.2.1-alpha.0"
authors = ["Fabian Freyer <fabian.freyer@physik.tu-berlin.de>"]
description = "FreeBSD jail library"
license = "BSD-3-Clause"
repository = "https://github.com/fubarnetes/libjail-rs"
documentation = "https://fubarnetes.github.io/libjail-rs/x86_64-unknown-freebsd/jail/index.html"
keywords = ["freebsd", "jail", "container", "chroot"]
categories = ["os::unix-apis", "api-bindings"]
readme = "README.md"
exclude = [ ".cirrus.yml", ".github", ".gitignore", ".travis.yml", "ci" ]
edition = "2018"

[lib]
name = "jail"
path = "src/lib.rs"

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "fubarnetes/libjail-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "fubarnetes/libjail-rs" }
is-it-maintained-open-issues = { repository = "fubarnetes/libjail-rs" }

[features]
serialize = ["serde", "serde_json", "rctl/serialize"]
tokio = ["dep:tokio"]

[dependencies]
bitflags = "^1"
byteorder = "^1.2.3"
libc = "~0.2.41"
log="0.4"
sysctl = "~0.4.0"
nix= "^0.22.0"
rctl = "0.2.0"
strum = "0.21.0"
strum_macros = "0.21.1"
serde = { version="1.0", features = ["derive"], optional=true}
serde_json = { version="1.0", optional=true }
thiserror = "1.0"
tokio = { version = "1.28", features = ["process"], optional = true }

[dev-dependencies]
cli-table = { version="0.4", default-features=false, features=["derive"] }
pretty_env_logger = "0.4"
